2001-06-07  Christian Rose  <menthos@menthos.com>

	* capplets/desktop-links/Appearances.directory,
	capplets/desktop-links/Multimedia.directory,
	capplets/desktop-links/Peripherals.directory,
	capplets/desktop-links/UIOptions.directory,
	capplets/gnome-edit-properties/gnome-edit-properties.desktop,
	capplets/mime-type/mime-type.desktop,
	capplets/new-ui-properties/behavior.desktop,
	capplets/screensaver-properties/screensaver-desktops/
	screensaver-properties.desktop,
	capplets/sound-properties/sound-properties.desktop,
	capplets/theme-switcher/theme-selector.desktop:
	Modified Swedish entry.

2001-05-05  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Add check for libximian_archiver; try include
	cflags and libs only if the archiver is present *
	capplets/*/main.c: Add #ifdef's around anything that uses the
	Ximian archiver so that the capplets can compile without it

2001-05-03  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/*/main.c (main): Handle --get-defaults
	(do_restore_from_defaults): Implement

	* capplets/*/preferences.c (preferences_init): Load default values

2001-04-27  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/wm-properties/wm-list.c (wm_read_from_xml): Make
	desktop-entry an attribute rather than a child node

	* capplets/*/main.c: Do not try to load preferences from XML if
	there was not XML data

2001-04-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/*/main.c:
	* capplets/*/preferences.c: Support --location

2001-04-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/Makefile.am (always_built_SUBDIRS): Compile in
	new-screensaver-properties

2001-04-24  Anna Marie Dirks <anna@ximian.com> 
	* capplets/interfaces/control-center.glade: This is the initial mockup of my reorganization of control center's menus; I'm committing it to garner input. This file includes separate menus for simple, intermediate and advanced modes; it does not include any graphics (yet).  

2001-04-14  Bradford Hovinen <hovinen@ximian.com>